--- a/html/evikurniati_landingpage.html
+++ b/html/evikurniati_landingpage.html
@@ -35,7 +35,7 @@
     <!-- jumbotron-->
 
     <section class="jumbotron text-center">
-      <img src="https://drive.google.com/file/d/1PZopl214CKJp0uZYIsUnwLfhuGJkt9jD/view?usp=drivesdk" alt=" evi kurniati" width="400" class="circle img-thumbnail" />
+      <img src="evikurniati.jpeg" alt="evi kurniati" width="400" class="circle img-thumbnail" />
      <h2>Hello</h2>
 					<h1 class="fw-bold">I Am Evi Kurniati</h1>
 					<p> I am A student at the University of West Sulawesi majoring in informatics </p>
@@ -62,36 +62,36 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="https://media.istockphoto.com/photos/young-latin-engineer-calibrating-drill-picture-id1057719100?b=1&k=20&m=1057719100&s=170667a&w=0&h=uj3HnxwXDbdWAt91dCPHXD711HDSBzG_z4rNMWSDl8c="
+                src="gambar1.jpeg"
                 class="card-img-top"
-                alt="https://media.istockphoto.com/photos/young-latin-engineer-calibrating-drill-picture-id1057719100?b=1&k=20&m=1057719100&s=170667a&w=0&h=uj3HnxwXDbdWAt91dCPHXD711HDSBzG_z4rNMWSDl8c="
+                alt="gambar1.jpeg"
               />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Ini merupakan foto saat saya dan beberapa teman saya saat berada dikampus.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="https://images.unsplash.com/photo-1607705703571-c5a8695f18f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8bWVkaWNoYWwlMjBjb2Rpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                src="gambar2.jpeg"
                 class="card-img-top"
-                alt="https://images.unsplash.com/photo-1607705703571-c5a8695f18f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8bWVkaWNoYWwlMjBjb2Rpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                alt="gambar2.jpeg"
               />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Ini merupakan foto suasana perkuliahan offline di labaoratorium komputer Universitas Sulawesi Barat.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWVkaWNoYWwlMjBjb2Rpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                src="gambar3.jpeg"
                 class="card-img-top"
-                alt="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8bWVkaWNoYWwlMjBjb2Rpbmd8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+                alt="gambar3.jpeg"
               />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Ini merupakan foto ketika saya berada di perputakaan digital Universitas Sulawesi Barat.</p>
               </div>
             </div>
           </div>
