--- a/html/evikurniati_landingpage.html
+++ b/html/evikurniati_landingpage.html
@@ -35,7 +35,7 @@
     <!-- jumbotron-->
 
     <section class="jumbotron text-center">
-      <img src="evikurniati.jpeg" alt="evi kurniati" width="400" class="circle img-thumbnail" />
+      <img src="img/evikurniati.jpeg" alt="evi kurniati" width="400" class="circle img-thumbnail" />
      <h2>Hello</h2>
 					<h1 class="fw-bold">I Am Evi Kurniati</h1>
 					<p> I am A student at the University of West Sulawesi majoring in informatics </p>
@@ -62,7 +62,7 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="gambar1.jpeg"
+                src="img/gambar1.jpeg"
                 class="card-img-top"
                 alt="gambar1.jpeg"
               />
@@ -74,7 +74,7 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="gambar2.jpeg"
+                src="img/gambar2.jpeg"
                 class="card-img-top"
                 alt="gambar2.jpeg"
               />
@@ -86,7 +86,7 @@
           <div class="col-md-4 mb-3">
             <div class="card">
               <img
-                src="gambar3.jpeg"
+                src="img/gambar3.jpeg"
                 class="card-img-top"
                 alt="gambar3.jpeg"
               />
